Change to oauth sign in button

--- a/OculusGooglePhotos-Web/public/index.html
+++ b/OculusGooglePhotos-Web/public/index.html
@@ -27,11 +27,21 @@
 		</div>
 		<div id="step-1">
 			<h2>Authorize VR Gallery to view your Google Photos</h2>
-			<div id="google-button"></div>
+			<button id="sign-in-button" onclick="onSignInButtonClick()">
+				<i class="fa-brands fa-google"></i>
+				<p>Sign in to Google Photos</p>
+			</button>
+		</div>
+		<div id="step-2">
+			<p><i class="fa-solid fa-circle-notch"></i></p>
+		</div>
+		<div id="step-3">
+			<h1>Awesome sauce!<h1>
+			<p>Now, return to the VR app.</p>
 		</div>
 		<p id="error"></p>
 	</div>
-	
+
 	<script src="index.js"></script>
 </body>
 
