Update homepage to adhere to Google guidelines

--- a/OculusGooglePhotos-Web/public/index.html
+++ b/OculusGooglePhotos-Web/public/index.html
@@ -20,7 +20,8 @@
 
 <body>
 	<img id="logo" src="resources/logo.png" alt="Logo">
-	<h1>VR Gallery for Google Photos</h1>
+	<h1 id="title">VR Gallery for Google Photos</h1>
+	<p id="subtitle">The easiest way to view your 360° media from Google Photos on your Oculus Quest.
 	<div id="link-box">
 		<div id="step-0">
 			<h2>Have a link code?</h2>
@@ -44,7 +45,17 @@
 		</div>
 		<p id="error"></p>
 	</div>
-
+	<div id="list-container">
+		<ul>
+			<li>View flat and 360° photos and videos</li>
+			<li>Your photos data never leaves your device</li>
+			<li><a href="https://github.com/ericyoondotcom/oculusgooglephotos">Open-source!</a></li>
+		</ul>
+	</div>
+	<p id="footer">
+		<a href="https://yoonicode.com?utm_source=oculusgooglephotos&utm_medium=web&utm_campaign=oculusphotos-footer">Made by Yoonicode</a> • 
+		<a href="policy.html">Privacy Policy and Terms of Service</a>
+	</p>
 	<script src="index.js"></script>
 </body>
 
