--- a/OculusGooglePhotos-Web/public/policy.html
+++ b/OculusGooglePhotos-Web/public/policy.html
@@ -11,16 +11,23 @@
 <body>
     <h1>Privacy Policy and Terms of Service</h1>
     <p>
-        When you sign in to VR Gallery for Google Photos, you allow us to access some identification data, such
-        as your email address and name.
+        When you sign in to VR Gallery for Google Photos, you allow us to access your Google Photos library,
+        along with other data received from the Google Photos API.
     </p>
     <p>
         VR Gallery for Google Photos does not store any of your Google Photos data on our servers. All photos
         data is handled on-device.
     </p>
     <p>
+        VR Gallery for Google Photos' use and transfer to any other app of information received from Google APIs
+        will adhere to the
+        <a href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data Policy</a>,
+        including the Limited Use requirements.
+    </p>
+    <p>
         If you have any questions, please contact
         <a href="mailto:eric@yoonicode.com">eric@yoonicode.com</a>
         .
+    </p>
 </body>
 </html>
