--- a/OculusGooglePhotos-Web/public/index.html
+++ b/OculusGooglePhotos-Web/public/index.html
@@ -13,6 +13,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
 	<script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app-compat.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-functions-compat.js"></script>
@@ -33,8 +34,8 @@
 		<div id="step-1">
 			<h2>Authorize VR Gallery to view your Google Photos</h2>
 			<button id="sign-in-button" onclick="onSignInButtonClick()">
-				<i class="fa-brands fa-google"></i>
-				<p>Sign in to Google Photos</p>
+				<img src="resources/google-photos-logo.png" alt="Google Photos logo">
+				<p>Connect to Google Photos</p>
 			</button>
 		</div>
 		<div id="step-2">
