Update privacy policy

--- a/OculusGooglePhotos-Web/public/policy.html
+++ b/OculusGooglePhotos-Web/public/policy.html
@@ -9,21 +9,30 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;700&display=swap" rel="stylesheet">
 <body>
-    <h1>Privacy Policy and Terms of Service</h1>
+    <h1 style="margin-bottom: 30px;">Privacy Policy and Terms of Service</h1>
+    <h2>User Data Collection and Usage</h2>
     <p>
-        When you sign in to VR Gallery for Google Photos, you allow us to access your Google Photos library,
-        along with other data received from the Google Photos API.
+        When you sign in to VR Gallery for Google Photos, you allow us to access specific media items that you choose from your Google Photos library. We collect information pertaining to these media items, such as the photo or video, along with certain metadata about the media item. In addition, we may access basic information about your Google account, including your name or email address.
     </p>
     <p>
-        VR Gallery for Google Photos does not store any of your Google Photos data on our servers. All photos
-        data is handled on-device.
-    </p>
-    <p>
-        VR Gallery for Google Photos' use and transfer to any other app of information received from Google APIs
-        will adhere to the
+        We use your data to display your photos and videos in a virtual reality environment. VR Gallery for Google Photos' use and transfer to any other app of information received from Google APIs will adhere to the
         <a href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data Policy</a>,
         including the Limited Use requirements.
     </p>
+    <h2>Data Sharing</h2>
+    <p>
+        We never sell your data to third parties or upload your photos or videos to any external servers. Your photos data remains on-device at all times.
+    </p>
+    <h2>Data Protection</h2>
+    <p>
+        We value the privacy of your data, which is why we do not upload your photos or videos to our servers. Your photos data never leaves your device.
+    </p>
+    <h2>Data Retention</h2>
+    <p>
+        Your photos data is stored locally, and is only retained on-device for
+        the length of your session. When you close the app, all cached photos and videos are removed from your device.
+    </p>
+    <h2>Questions</h2>
     <p>
         If you have any questions, please contact
         <a href="mailto:eric@yoonicode.com">eric@yoonicode.com</a>
